--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     -->
     <title>Front End Course Directory</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="utf-8"/>
   </head>
   <body>
     <div id="root"></div>
